--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MERN Internship Assignment</title>
+    <title>Mernstack-Assignment-22BCE10844</title>
   </head>
   <style>
     * {
@@ -24,11 +24,11 @@
     }
   </style>
   <body>
-    <h1>MERN Internship Assignment</h1>
-    <h3>Name :- MOHD MUNAWWER ALI USMANI</h3>
-    <h3>Reg. No. :- 22BCE11454</h3>
+    <h1>Mernstack-Assignment-22BCE10844</h1>
+    <h3>Name :- Nishant Shinde</h3>
+    <h3>Reg. No. :- 22BCE10844</h3>
 
-    <h3>Email :- mohdmunawweraliusmani2022@vitbhopal.ac.in</h3>
+    <h3>Email :- nishantsanjayshinde2022@vitbhopal.ac.in</h3>
     
     <h2>HTML Task</h2>
     <table border="5">
